# asutp-mixing-module

./: .gitignore  README.md  pyproject.toml  start-ui-local.bat
.github/workflows/: nightly-build.yml
config/: io_topics.yaml  mixer_plough.json  mixer_ribbon.json  mixer_screw.json  mixer_turbulent.json  viz_params.yaml
docs/: application-development-plan.md  error-check-report.md  mathematical-apparatus.md  plough-mixer-case-analysis.md  user-guide.en.md  user-guide.md  user-guide.ru.md
scripts/: build_exe.ps1  build_installer.ps1  installer.iss  start-ui-local.ps1
src/mixing_module/: __init__.py  app_launcher.py  calibration.py  cascade.py  cli.py  h_kinetics.py  historian.py  homogenization_metrics.py  homogenization_opc.py  homogenization_plots.py  homogenization_predictor.py  homogenization_report.py  integration_validation.py  io_contracts.py  material_db.py  mix_quality_runtime.py  quality_monitoring.py  recipe_changelog.py  recipe_storage.py  recipe_versioning.py  recipes.py  release_evidence.py  scaling.py  simulator.py  ui.py  (+2 more)
tests/: test_calibration.py  test_cascade.py  test_h_kinetics.py  test_h_kinetics_acceptance.py  test_historian.py  test_homogenization_metrics.py  test_homogenization_opc.py  test_homogenization_predictor.py  test_homogenization_report.py  test_integration_validation.py  test_io_contracts.py  test_mix_quality_runtime.py  test_quality_monitoring.py  test_recipe_changelog.py  test_recipe_storage.py  test_recipe_versioning.py  test_release_evidence.py  test_scaling.py  test_simulator.py  test_viz_config.py  test_wet_model.py
